Time to eliminate some of those CHECKMEs